add_library(bomberman_logic STATIC
    ${PROJECT_SOURCE_DIR}/src/logic/state/State.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/state/State.h
    ${PROJECT_SOURCE_DIR}/src/logic/state/PlayState.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/state/PlayState.h
    ${PROJECT_SOURCE_DIR}/src/logic/state/TitleState.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/state/TitleState.h
    ${PROJECT_SOURCE_DIR}/src/logic/state/StateManager.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/state/StateManager.h
    ${PROJECT_SOURCE_DIR}/src/logic/World.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/World.h
    ${PROJECT_SOURCE_DIR}/src/logic/Camera.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/Camera.h
    ${PROJECT_SOURCE_DIR}/src/utils/Random.cpp
    ${PROJECT_SOURCE_DIR}/include/utils/Random.h
    ${PROJECT_SOURCE_DIR}/src/logic/Tile.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/Tile.h
    ${PROJECT_SOURCE_DIR}/include/logic/Observer.h
    ${PROJECT_SOURCE_DIR}/include/logic/Input.h
    ${PROJECT_SOURCE_DIR}/include/logic/Subject.h
    ${PROJECT_SOURCE_DIR}/src/utils/Stopwatch.cpp
    ${PROJECT_SOURCE_DIR}/include/utils/Stopwatch.h
    ${PROJECT_SOURCE_DIR}/include/logic/factory/IEntityFactory.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/Player.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/Player.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/AIBomber.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/AIBomber.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/Bomber.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/Bomber.h
    ${PROJECT_SOURCE_DIR}/include/logic/factory/BomberType.h
    ${PROJECT_SOURCE_DIR}/src/logic/Rect.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/Rect.h
    ${PROJECT_SOURCE_DIR}/include/logic/factory/Entity.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/Bomb.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/Bomb.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/DestructibleWall.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/DestructibleWall.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/Explosion.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/Explosion.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/CrumblingWall.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/CrumblingWall.h
    ${PROJECT_SOURCE_DIR}/include/utils/Position.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/PowerUp.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/PowerUp.h
    ${PROJECT_SOURCE_DIR}/src/logic/factory/KnockedOutBomber.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/factory/KnockedOutBomber.h
    ${PROJECT_SOURCE_DIR}/src/logic/Score.cpp
    ${PROJECT_SOURCE_DIR}/include/logic/Score.h
)

target_include_directories(bomberman_logic PUBLIC ${PROJECT_SOURCE_DIR}/include)
